manifests/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: huit-k8s-nginx
  name: huit-k8s-nginx-service # Service名
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # GCP特有の設定
spec:
  type: ClusterIP # Service にクラスタ内部で使用できるIPを付与するタイプ
  clusterIP: None # 今回は外部公開するためClusterIPが不要なので付与しない
  selector:
    name: nginx # ServiceとしてまとめるPodのラベル
  ports:
    - name: http
      port: 8080 # Serviceとして待ち受けるポート
      protocol: TCP
      targetPort: 80 # コンテナ側のポート
